[MOSIP-8972] Feature to pull dockers from private registry implemented.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -22,6 +22,9 @@ site:
 is_glowroot: absent  # absent or present
 
 docker_wait_time: 600   # Wait for docker to pull and deploy
+docker_hub:
+  private: false  # For private dockers set this to true, and set credentials in secrets.yml
+  keyname: dockerhubkey  # Name of kubernetes secret
 
 clusters:
   mz:
