--- a/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
@@ -24,6 +24,7 @@ spec:
         app: {{ .Values.services.otp.serviceName }} 
         component: {{ .Values.component }} 
     spec:
+      {{- include "dockerHubSecret" .  | indent 6}}
       initContainers:  # TODO: Temporarily added as a workaround. Duplicate key issue. 
       - name: wait-for-auth
         image: ellerbrock/alpine-bash-curl-ssl
