[MOSIP-8774] Reading properties from environment variables enabled in config server.  This is needed for admin module.

--- a/deployment/sandbox-v2/helm/charts/config-server/templates/config-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/config-dep.yaml
@@ -29,10 +29,12 @@ spec:
           value: {{ .Values.gitRepo.searchFolders }}
         - name: ENCRYPT_KEY
           value: {{ .Values.encryptKey }}
-        - name: KEYCLOAK_EXTERNAL_URL 
-          value: {{ .Values.additionalParams.keycloakExternalUrl }}
-        - name: SANDBOX_PUBLIC_URL
+        - name: SPRING_CLOUD_CONFIG_OVERRIDENONE
+          value: "true"
+        - name: SPRING_CLOUD_CONFIG_SERVER_OVERRIDES_SANDBOX_PUBLIC_URL
           value: {{ .Values.additionalParams.sandboxPublicUrl }}
+        - name: SPRING_CLOUD_CONFIG_SERVER_OVERRIDES_KEYCLOAK_EXTERNAL_URL
+          value: {{ .Values.additionalParams.keycloakExternalUrl }}
         {{ if eq .Values.localRepo.enabled true }}
         - name: SPRING_CLOUD_CONFIG_SERVER_GIT_URI
           value: {{ .Values.localRepo.mountPath }}
