--- a/deployment/sandbox-v2/roles/postgres-init/tasks/init_db.yml
+++ b/deployment/sandbox-v2/roles/postgres-init/tasks/init_db.yml
@@ -14,12 +14,6 @@
     regexp: '^DB_PORT='
     line: DB_PORT={{postgres.nodeport}}  # Defined in all.yml
 
-- name: '{{pg_db_name}}: Update super user password in postgres init files' 
-  lineinfile:
-    path: '{{pg_sql_path}}/{{pg_db_name}}/{{pg_db_name}}_deploy.properties'
-    regexp: '^SU_USER_PWD='
-    line: SU_USER_PWD={{postgres.default_password}}
-
 - name: '{{pg_db_name}}: Update basepath in postgres init files' 
   lineinfile:
     path: '{{pg_sql_path}}/{{pg_db_name}}/{{pg_db_name}}_deploy.properties'
@@ -32,7 +26,20 @@
     regexp: '^LOG_PATH='
     line: LOG_PATH={{logs_dir}}/
 
+- name: Delete all passwords from property files so that they can be read from env variables
+  lineinfile:
+    path: '{{pg_sql_path}}/{{pg_db_name}}/{{pg_db_name}}_deploy.properties'
+    regexp: '_PWD'
+    state: absent
+
+# Pass all passwords via env variables instead of reading from file for privacy.
 - name: 'Run {{pg_db_name}} shell script'
   shell: 'bash {{pg_db_name}}_db_deploy.sh {{pg_db_name}}_deploy.properties'
+  environment:
+    SU_USER_PWD: '{{secrets.postgres.su}}'
+    SYSADMIN_PWD: '{{secrets.postgres.sysadmin}}'
+    DBADMIN_PWD: '{{secrets.postgres.dbadmin}}'
+    APPADMIN_PWD: '{{secrets.postgres.appadmin}}'
+    DBUSER_PWD: '{{secrets.postgres.dbuser}}'
   args:
     chdir: '{{pg_sql_path}}/{{pg_db_name}}'
