--- a/deployment/sandbox-v2/playbooks/kernel.yml
+++ b/deployment/sandbox-v2/playbooks/kernel.yml
@@ -6,7 +6,7 @@
     kube_config: '{{clusters.mz.kube_config}}' 
     hsm_prop: '{{softhsm.keymanager}}'
 
-## Run all kernel services
+# Run all kernel services
 - hosts: console
   vars:
     kube_config: '{{clusters.mz.kube_config}}'
@@ -18,3 +18,15 @@
     helm_strings: ''
   roles:
     - {role:  helm}
+
+# Init master keys. 
+# This is done using a temporary python script. NOT to be done in this
+# fashion on production.  TODO: move to docker init instead of this script.
+#
+- hosts: console
+  gather_facts: false
+  tasks:
+    - name: Initialize master keys of keymanager
+      shell: './utils/init_keys.py {{sandbox_domain_name}}'
+      args:
+        chdir: '{{install_root}}'
