--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -159,3 +159,7 @@ versions:
         'admin-service': 'mosipid/admin-service:1.1.1'
       ui:
         'admin-ui': 'mosipid/admin-ui:1.1.1'
+    
+    packetmanager:
+      service:
+        'packetmanager-service': 'mosipdev/commons-packet-service:develop'
