--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -23,6 +23,7 @@
 # MOSIP modules
 - import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/kernel.yml
+- import_playbook: playbooks/packetmanager.yml
 - import_playbook: playbooks/prereg.yml
 - import_playbook: playbooks/regproc.yml
 - import_playbook: playbooks/ida.yml
