[MOSIP-9080] Minor changes for minio.

--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -19,7 +19,7 @@
 - import_playbook: playbooks/mzclamav.yml  # Each zone has it's own clamav
 - import_playbook: playbooks/dmzclamav.yml
 - import_playbook: playbooks/activemq.yml
-- import_playbook: playbooks/hdfs.yml
+- import_playbook: playbooks/minio.yml
 # MOSIP modules
 - import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/kernel.yml
