--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -74,6 +74,8 @@ keycloak_mosip_users: # Assumption "username.json" exists with same username ins
   - {realm_id: 'mosip', user_file: 'users/pm_testuser.json'}
   - {realm_id: 'mosip', user_file: 'users/110068.json'}
   - {realm_id: 'mosip', user_file: 'users/110010.json'}
+  - {realm_id: 'mosip', user_file: 'users/110011.json'}
+  - {realm_id: 'mosip', user_file: 'users/110012.json'}
   
 
 keycloak_mosip_user_role_map:  
@@ -285,6 +287,9 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: '110022', role_name: 'REGISTRATION_ADMIN'}
   - {realm_id: 'mosip', username: '110022', role_name: 'REGISTRATION_SUPERVISOR'}
   - {realm_id: 'mosip', username: '110022', role_name: 'RESIDENT'}
+  
+  - {realm_id: 'mosip', username: '110011', role_name: 'REGISTRATION_SUPERVISOR'}
+  - {realm_id: 'mosip', username: '110012', role_name: 'REGISTRATION_SUPERVISOR'}
   
   - {realm_id: 'mosip', username: 'pm_testuser', role_name: 'MISP'}
   - {realm_id: 'mosip', username: 'pm_testuser', role_name: 'PARTNER'}
