[MOSIP-9174] New DBs added.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -8,7 +8,7 @@ tmp_dir: '{{install_root}}/tmp/'
 logs_dir: '{{tmp_dir}}/logs'
 charts_root: '{{install_root}}/helm/charts'  # Helm charts root
 helm_cli_path: '{{user_home}}/bin'  # This path chosen as it is included in default $PATH in Centos 7.7
-artifactory_url: http://15.207.222.178
+artifactory_url: http://15.207.222.178/
 
 sandbox_domain_name: minibox.mosip.net
 site:
@@ -188,6 +188,18 @@ databases:
   mosip_audit:
     user: audituser
     sql_path: '{{repos.commons.dest}}/db_scripts'
+  mosip_authdevice:
+    user: authdeviceuser
+    sql_path: '{{repos.commons.dest}}/db_scripts'
+  mosip_keymgr:
+    user: keymgruser
+    sql_path: '{{repos.commons.dest}}/db_scripts'
+  mosip_regdevice:
+    user: regdeviceuser
+    sql_path: '{{repos.commons.dest}}/db_scripts'
+  mosip_credential:
+    user: credentialuser
+    sql_path: '{{repos.idrepo.dest}}/db_scripts'
   mosip_idrepo:
     user: idrepouser
     sql_path: '{{repos.idrepo.dest}}/db_scripts'
