--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -30,5 +30,6 @@
 - import_playbook: playbooks/idrepo.yml
 - import_playbook: playbooks/pms.yml
 - import_playbook: playbooks/resident.yml
+- import_playbook: playbooks/admin.yml
 # Regclient downloader
 - import_playbook: playbooks/reg-client-downloader.yml
